syntax = "proto3";

option csharp_namespace = "Fitness_App_Workout.API.Grpc";

package user;

service UserService {
  rpc ValidateToken (TokenRequest) returns (UserResponse);
}

message TokenRequest {
  string accessToken = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string username = 3;
}
